# morse-code-decode

./: README.md  pyproject.toml
src/morse/: __init__.py  cli.py  decode.py  loader.py  output.py  playback.py  synth.py  table.py  weather.py
tests/: test_roundtrip.py
